# crates/sdkwork-routes-webserver-backend-api/src/paths.rs
@@ -1,9 +1,9 @@
 pub const PREFIX: &str = "/backend/v3/api";
 
 pub const NGINX_CONFIGS: &str = "/backend/v3/api/nginx/configs";
-pub const NGINX_CONFIG: &str = "/backend/v3/api/nginx/configs/{configId}";
-pub const NGINX_CONFIG_VALIDATE: &str = "/backend/v3/api/nginx/configs/{configId}/validate";
-pub const NGINX_CONFIG_DEPLOY: &str = "/backend/v3/api/nginx/configs/{configId}/deploy";
+pub const NGINX_CONFIG: &str = "/backend/v3/api/nginx/etc/{configId}";
+pub const NGINX_CONFIG_VALIDATE: &str = "/backend/v3/api/nginx/etc/{configId}/validate";
+pub const NGINX_CONFIG_DEPLOY: &str = "/backend/v3/api/nginx/etc/{configId}/deploy";
 pub const NGINX_RELOAD: &str = "/backend/v3/api/nginx/reload";
 pub const NGINX_STATUS: &str = "/backend/v3/api/nginx/status";
 pub const SERVERS: &str = "/backend/v3/api/servers";
